[tool.poetry]
name = "anyutils"
version = "0.1.0"
description = ""
authors = ["CherryGS <tickten@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "anyutils" }]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.5.0"
regex = "2023.12.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
